<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    >

    <ImageView android:src="@mipmap/prelogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:padding="15dp"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:id="@+id/login_wrongData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/wrongDataLogin_ger"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="invisible"/>

    <!-- Email Label -->

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:singleLine="true"
        android:hint="@string/email_ger" />


    <!-- Password Label -->
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:singleLine="true"
        android:hint="@string/password_ger"/>


    <!-- Signup Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/loginAcc_ger"
        android:layout_gravity="center"     />

    <TextView
        android:id="@+id/signup_link_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/createAccLink_ger"
        android:gravity="center"
        android:textSize="16sp"/>

</LinearLayout>