<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    >

    <ImageView android:src="@mipmap/prelogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:padding="15dp"
        android:layout_gravity="center_horizontal" />
    <!-- Email Label -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loggedInAs_ger"
        android:padding="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/email_ger"
        />




    <!-- Password Label -->
    <TextView
        android:id="@+id/logout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />


    <!-- Signup Button -->
    <Button
        android:id="@+id/logout_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/logout_ger"
        android:layout_gravity="center"     />



</LinearLayout>