<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <!--Controlls layout  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.1">

                <Button
                    android:id="@+id/add_dish_cancelbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="0.5"
                    android:background="@color/red"
                    android:text="@string/add_dish_layout_cancelbutton_text" />

                <Button
                    android:id="@+id/add_dish_addbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="0.5"
                    android:background="@color/green"
                    android:text="@string/add_dish_layout_addbutton_text" />


            </LinearLayout>

            <View style="@style/Divider"/>

            <!--Photo layout  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="vertical">
                <Button
                    android:id="@+id/add_dish_add_picture_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:text="@string/add_dish_add_photo"
                    android:textSize="20dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/add_dish_photoimage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible" />

            </LinearLayout>

            <!--Input layout  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="0.3">

                <EditText
                    android:id="@+id/add_dish_nameedit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_dish_add_name"
                    android:layout_margin="15dp"/>

                <RatingBar
                    android:id="@+id/add_dish_ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:stepSize="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Vegan?"
                    android:textSize="20dp"
                    />


                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:checkedButton="@+id/radio_vegan_noinfo"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_vegan_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dish_layout_radio_yes" />

                    <RadioButton
                        android:id="@+id/radio_vegan_noinfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dish_layout_radio_noinfo" />

                    <RadioButton
                        android:id="@+id/radio_vegan_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dish_layout_radio_no" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Glutenfrei?"
                    android:textSize="20dp" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:checkedButton="@+id/radio_glutenfree_noinfo"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_glutenfree_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dish_layout_radio_yes" />

                    <RadioButton
                        android:id="@+id/radio_glutenfree_noinfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dish_layout_radio_noinfo" />

                    <RadioButton
                        android:id="@+id/radio_glutenfree_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_dish_layout_radio_no" />
                </RadioGroup>


                <EditText
                    android:id="@+id/add_dish_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_dish_layout_Gericht_zum_Kommentar"
                    android:layout_margin="15dp"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
