<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/restaurant_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <!--Info layout  -->

            <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >


                <android.support.v4.view.ViewPager
                    android:id="@+id/restaurant_detail_slideshow"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    >

                </android.support.v4.view.ViewPager>

                <ProgressBar
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/restaurant_detail_progressBarImage"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_detail_progressBarScreen"
                android:layout_gravity="center_horizontal"
                android:indeterminate="false" />



            <LinearLayout
                android:id="@+id/restaurant_detail_linearlayout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/dark_green"
                android:orientation="vertical"
                android:layout_weight="0.2"
                android:padding="5dp"
                android:visibility="invisible">


                <TextView
                    android:id="@+id/restaurant_detail_textview_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/waiting_string"
                    android:textSize="25sp"
                    />

                <TextView
                    android:id="@+id/restaurant_detail_textview_openinghours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/waiting_string"
                    />

                <View style="@style/Divider"/>

                <!--
                           -->

                <TextView
                    android:id="@+id/restaurant_detail_textview_telephonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/waiting_string"
                    android:linksClickable="true"
                    android:autoLink="phone"
                    android:textSize="16sp" />

                <View style="@style/Divider"/>

                <TextView
                    android:id="@+id/restaurant_detail_textview_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/waiting_string"
                    android:linksClickable="true"
                    android:autoLink="web"
                    android:textSize="16sp" />

                <View style="@style/Divider"/>


                <TextView
                    android:id="@+id/restaurant_detail_textview_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/waiting_string" />

                <View style="@style/Divider"/>

                <Switch
                    android:id="@+id/restaurant_detail_favswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switchText_ger"
                    android:textSize="16sp"/>


            </LinearLayout>

            <!--Dish adding layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/restaurant_detail_dishlayout"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.1"
                android:layout_margin="15dp"
                android:outlineProvider="bounds"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/restaurant_detail_dishcounter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/restaurant_detail_layout_eingetragene_gerichte"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/restaurant_detail_dishaddbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/bright_blue"

                    android:text="+" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>